2009-09-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add PSP MP4 video type

2009-07-31  Bastien Nocera  <hadess@hadess.net>

	* tests/list: Fix test suite for those pesky PS files

2009-07-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.otf as a glob for
	OpenType fonts so file managers use magic to check
	for fonts vs. OO.o documents (Closes: #20854)

2009-05-20  Bastien Nocera  <hadess@hadess.net>

	* tests/list:
	* tests/text.PS.gz:
	* tests/text.ps.gz: Add test cases for multi-suffix files,
	with mixed-cases

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.por:
	* tests/test.sav: Patch from Ben Pfaff <blp@cs.stanford.edu>
	to add SPSS portable and save formats mime-types (Closes: #20834)

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* tests/list:
	* tests/test.bflng:
	* tests/test.xhtml: Add a few disable tests for bug #19201

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.c (main): Patch from Martin von Gagern
	<Martin.vGagern@gmx.net> to give a better error message when
	a directory doesn't exist (Closes: #20552)

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/foo.doc:
	* tests/list: And another magic for Word documents, and a test case
	(Closes: #20604)

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list: Add another magic for Word documents, along with a test
	case update (Closes: #20275)

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Avoid some .ini files getting detected
	as Cisco VPN configuration files, when they start with "[main]"
	(Closes: #20302)
	* tests/list:
	* tests/menu.ini: Add test case to verify the above

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/tree-list: Patch from Cosimo Cecchi <cosimoc@gnome.org> to