@@ -3321,6 +3321,17 @@ command to generate the output files.
     <glob pattern="*.j2k"/>
     <glob pattern="*.jpf"/>
   </mime-type>
+  <mime-type type="image/openraster">
+    <_comment>OpenRaster archiving image</_comment>
+    <magic priority="50">
+      <match type="string" value="PK\003\004" offset="0">
+        <match type="string" value="mimetype" offset="30">
+          <match type="string" value="image/openraster" offset="38"/>
+        </match>
+      </match>
+    </magic>
+    <glob pattern="*.ora"/>
+  </mime-type>
   <mime-type type="image/x-dds">
     <_comment>DirectDraw surface</_comment>
     <magic priority="50">
