@@ -51,6 +51,8 @@ bathead.sk image/x-skencil
 jc-win.ani application/x-navi-animation
 # Copied from http://blogs.vertigosoftware.com/alanl/archive/2006/06/28/Vista_Cursors_on_Windows_XP.aspx
 aero_alt.cur image/x-win-bitmap
+# copied from the mypaint examples
+mypaint.ora image/openraster
 # Copied from https://bugs.freedesktop.org/show_bug.cgi?id=19201#c4
 # test.bflng application/xml x
 # Copied from https://bugs.freedesktop.org/show_bug.cgi?id=19201#c3
