@@ -1,3 +1,11 @@
+2009-09-16  Pino Toscano  <pino@kde.org>
+
+	* freedesktop.org.xml.in: Add image/openraster mimetype. References:
+	http://create.freedesktop.org/wiki/OpenRaster/File_Layout_Specification
+	* tests/mypaint.ora: Test data for image/openraster mimetype;
+	taken from the mypaint examples.
+	* tests/list: Add test case to the list.
+
 2009-09-15  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add PSP MP4 video type
